# severn

./: .rusty-hook.toml  Cargo.toml  README.md
examples/: basic.rs
severn/: Cargo.toml
severn-macros/: Cargo.toml
severn-macros/src/: lib.rs
severn/examples/: basic.rs  qdrant-data-source.rs  with-macros.rs
severn/src/: data_sources.rs  errors.rs  files.rs  lib.rs  models.rs  pipeline.rs
severn/src/agents/: mod.rs  premade.rs  traits.rs
src/: data_sources.rs  lib.rs  pipeline.rs
