[package]
name = "severn-macros"
version = "0.0.1"
edition = "2021"

[lib]
proc-macro = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0.85"
quote = "1.0.36"
syn = { version = "2.0.66", features = ["full"] }

[dev-dependencies]
rusty-hook = { workspace = true }
