[package]
name = "severn"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[example]]
name = "basic"
crate-type = ["bin"]

[[example]]
name = "qdrant-data-source"
crate-type = ["bin"]
required-features = ["qdrant"]

[dependencies]
async-trait = "0.1.80"
async-openai = "0.21.0"
serde_json = "1.0.117"
thiserror = "1.0.61"
anyhow = "1.0.86"
uuid = { version = "1.8.0", features = ["v4"] }

#feature-gated dependencies
reqwest = { version = "0.12.5", optional = true, features = ["json"] }
qdrant-client = { version = "1.9.0", optional = true }
severn-macros = { version = "0.0.1", path = "../severn-macros", optional = true }

[dev-dependencies]
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
rusty-hook = { workspace = true }

[features]
qdrant = ["dep:qdrant-client"]
http = ["dep:reqwest"]
macros = ["dep:severn-macros"]
